made the menu button stop looking ugly and offcenter

--- a/Index/index.css
+++ b/Index/index.css
@@ -39,13 +39,19 @@ body {
     height: 64px;
     flex-direction: row;
 }
+.MenuBar {
+    position: relative;
+    display: flex;      
+    align-items: center; 
+    justify-content: center; /* This should center the content */
+    padding-left: 0px; /* Adjust this value so that the title is centered accounting for the MenuButton */
+}
+
 .MenuButton {
     position: absolute;
-    left: -0.5%;
-    top: 3%;
-    transform: translateY(-10%);
-    margin-left: 15px;
-    margin-right: 15px;
+    left: 10px; /* Positions the MenuButton on the far left within the .MenuBar */
+    top: 50%;
+    transform: translateY(-50%);
     height: 30px;
     width: 30px;
     border: 2px solid black;
@@ -94,6 +100,9 @@ body {
 }
 
 .title {
+    flex-grow: 1; /* This should help in pushing the title to center if justify-content is set to center on the parent */
+    text-align: center;
+    padding-left: 0; /* You may adjust or remove left padding if it's pushing your title off-center */
     font-family: "Lexend Deca", "Helvetica Neue", Helvetica, Arial, sans-serif;
     display: grid;
     place-items: center;
